--- a/DocDbTestBench.csproj
+++ b/DocDbTestBench.csproj
@@ -120,6 +120,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
